--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -2,7 +2,6 @@
   background-color: var(--color-primary);
   width: 100%;
   height: 100px;
-
 }
 
 .header-container {
@@ -47,6 +46,9 @@
   border-radius: 50%;
   display: flex;
   margin-right: 30px;
+}
+
+@media (min-width: 1025px) {
 }
 
 .icon {
