--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -1,7 +1,8 @@
-.header {
+header {
   background-color: var(--color-primary);
   width: 100%;
   height: 100px;
+  display: flex;
 }
 
 .header-container {
@@ -11,13 +12,16 @@
 }
 
 .logo {
-  height: 100px;
+  height: 70px;
+  
+}
+header .logo{
+  margin: auto;
 }
 
 .navigation {
   margin: auto;
   display: flex;
-  flex-direction: row;
   justify-content: flex-end;
   width: 100%;
 }
@@ -25,12 +29,12 @@
 .navigation-container {
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: center;
   width: 100%;
 }
 
 .navigation-container > * {
-  width: 50%;
+  /* width: 50%; */
 }
 
 .navlist {
