--- a/src/Components/Assets/Searchbar/searchbar.css
+++ b/src/Components/Assets/Searchbar/searchbar.css
@@ -8,14 +8,13 @@
 @media (min-width: 1025px) {
   .searchbar-container {
     display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
     align-items: center;
     margin-left: auto;
   }
 }
 
 .searchbar-mobile {
+  display: flex;
   margin: 0 auto;
   display: flex;
   justify-content: center;
@@ -24,6 +23,7 @@
 
 .searchbar-mobile .searchbar {
   width: 400px;
+
 }
 
 .searchinput {
