--- a/src/Components/Layout/Footer/footer.css
+++ b/src/Components/Layout/Footer/footer.css
@@ -5,28 +5,26 @@ footer{
   width: 100%;
   margin-top: auto 5px;
   justify-content: space-around;
-  position: absolute; 
-  bottom: 0px; 
   padding: 15px 0 20px;
+}
+
+.footer-container{
+  width: 85%;
+  display: flex;
+  margin: auto;
+  gap: clamp(40px, 5vw, 150px);
 }
 
 footer .logo{
   margin-top: auto;
 }
 
-.footer-container{
-  width: calc(100vw - 160px);
-  display: flex;
-  margin: auto;
-  gap: clamp(40px, 5vw, 150px);
-}
-
 .footer-additional{
   display: flex;
   flex-direction: column;
   width: 100%;
-    align-items: flex-end;
-    gap: 15px
+  align-items: flex-end;
+  gap: 13px
 }
 
 .nav-container{
@@ -35,47 +33,25 @@ footer .logo{
   width: 100%;
 }
 
-
-
-
-
-
-
-
-
-
-
-/* .footer-container {
-  width: 90%;
-  display: flex;
-  justify-content: space-between;
-  align-content: flex-end;
-  margin: auto;
-} */
-
-.logo {
-  height: 70px;
-  margin: auto
+@media (max-width:1000px) {
+  .search-container{
+    display: none;
+  }
 }
 
 nav {
-  width: 40%;
+  width: 50%;
   margin: 0;
 }
 
 ul {
   list-style: none;
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
   margin: 0;
 }
 
 @media (max-width: 1025px) {
-  
-  .hidden-on-mobile {
-    display: none;
-  }
   
   ul {
     display: flex;
@@ -94,16 +70,8 @@ li {
   color: var(--color-light);
 }
 
-.copyright-container {
-  width: 40%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-
-@media only screen and (max-width: 600px) {
+/* @media only screen and (max-width: 600px) {
   #nav{
       background-color: red;
   }
-}
+} */
