--- a/src/Components/Main/Modal/Modal.css
+++ b/src/Components/Main/Modal/Modal.css
@@ -27,9 +27,17 @@ dialog button {
   top: 10px;
   font-size: 1.5rem;
   line-height: 1;
-  background-color: unset;
   border: none;
+  padding: 2px 5px;
+  border-radius: 5px;
+  transition: background-color 0.2s ease-out;
 }
 dialog button:hover {
   cursor: pointer;
+  background-color: rgb(220, 220, 220);
+}
+
+dialog iframe {
+  width: 100%;
+  height: 100%;
 }
