--- a/src/Components/Main/main.css
+++ b/src/Components/Main/main.css
@@ -2,12 +2,17 @@ main {
   width: calc(100vw - 160px);
   margin: auto;
   max-width: 1400px;
-  grid-area:content;
+  grid-area: content;
   min-height: 75vh;
 }
 
-.loadingCircle {
-  text-align: center;
+span.MuiCircularProgress-root {
+  height: 60px;
+  width: 60px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate3d(-50%, -50%, 0);
 }
 
 main article {
